# Ising-benchmark

./: .pdm-python  README.md  pyproject.toml
notebooks/: Benchmark results.ipynb  Ising hamiltonian.ipynb
src/ising_benchmark/: random_benchmark.py  utils.py
